# Signals-pipes-fifos-under-Linux-

./: 2matrix10by10.txt  CMakeLists.txt  Makefile  README.md  config.c  config.h  eigen.c  eigen.h  file_io.c  file_io.h  main.c  matrix.c  matrix.h  matrix.txt  matrix10by10.txt  matrix_ops  out.txt  worker_pool.c  worker_pool.h
